--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "apify": "^0.8.0",
+        "cheerio": "^1.0.0-rc.3",
         "htmldiff-js": "*"
     },
     "scripts": {
